--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-aiogram==3.3.0
-aiohttp==3.9.5
-async-timeout==4.0.3
-magic_filter==1.0.12
+aiogram==3.0.0b7
+python-dotenv==0.19.0
+requests==2.26.0
+SQLAlchemy==1.4.23
+psycopg2-binary==2.9.1
+apscheduler==3.9.1
