--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-aiogram==3.0.0b7
+aiogram==3.0.0
 python-dotenv==0.19.0
-requests==2.26.0
-SQLAlchemy==1.4.23
-psycopg2-binary==2.9.1
-apscheduler==3.9.1
+requests==2.28.1
+SQLAlchemy==1.4.41
+psycopg2-binary==2.9.5
+apscheduler==3.9.1.post1
+redis==4.5.1
